tests/baselines/reference/unusedClassesinNamespace4.errors.txt
tests/cases/compiler/unusedClassesinNamespace4.ts(10,5): error TS6195: 'c3' is declared but not used.


==== tests/cases/compiler/unusedClassesinNamespace4.ts (1 errors) ====
    namespace Validation {
        class c1 {
    
        }
    
        export class c2 {
    
        }
    
        class c3 extends c1 {
        ~~~~~~~~
!!! error TS6195: 'c3' is declared but not used.
    
        }
    }